# API_Adjustmenter

./: README.md  bootstrap_local_mvp.sh  handler.py  openapi.yaml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
src/api_adjustmenter/: diff.py  errors.py  main.py  models.py  normalize.py  rulesets.py  transform.py  util.py
src/api_adjustmenter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_rulesets.py  test_rulesets_ddb_types.py
